# rag-agent

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
pipeline/: __init__.py  __main__.py  config.py  pipeline.py
pipeline/ingestion/sources/cda/: __main__.py  config.py  downloader.py
pipeline/ingestion/sources/ix/: __main__.py  article.py  config.py  scrapper.py
pipeline/setup/: logging.py
scrappers/: __init__.py
scrappers/ix/: __init__.py  __main__.py  config.py  scrapper.py
src/rag_agent/: __init__.py  _version.py
src/rag_agent/pipeline/: __init__.py  __main__.py  base.py  config.py  pipeline.py
src/rag_agent/pipeline/chroma/: __init__.py  config.py  vectorstore.py
src/rag_agent/scrapers/: __init__.py
src/rag_agent/scrapers/ix/: __init__.py  __main__.py  article.py  config.py  downloader.py  scraper.py
src/rag_agent/ui/: __main__.py
src/rag_agent/utils/merge/: __main__.py
tests/ingestion/sources/ix/: test_article.py
tests/pipeline/: test_pipeline.py
tests/scrapers/ix/: test_article.py  test_scraper.py
tests/scrappers/ix/: test_article.py
