[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent"
version = "0.0.0"
description = "RAG (Retrieval-Augmented Generation) pipeline implementation"
requires-python = ">=3.12"
authors = [
    { name="Dawid Ciepiela", email="71898979+sarumaj@users.noreply.github.com" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp==3.13.2",
    "asyncio==4.0.0",
    "beautifulsoup4==4.14.2",
    "langchain==1.0.4",
    "langchain-chroma==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.0.3",
    "langchain-huggingface==1.0.1",
    "langchain-ollama==1.0.0",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.2",
    "nest-asyncio==1.6.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "tqdm==4.67.1"
]

[project.scripts]
rag-agent-ui = "rag_agent.ui.__main__:main"
rag-agent-pipeline = "rag_agent.pipeline.__main__:main"
rag-agent-scraper-ix = "rag_agent.scrapers.ix.__main__:main"
rag-agent-pdf-merge = "rag_agent.utils.merge.__main__:main"

[project.optional-dependencies]
loaders  = [
    "pymupdf==1.26.6",
    "unstructured==0.18.18"
]
scraper = [
    "selenium==4.38.0",
    "webdriver_manager==4.0.2"
]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0"
]
ui = [
    "panel==1.8.2",
    "Pygments==2.19.2"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["src/rag_agent"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--asyncio-mode=auto"
]
